[gd_scene load_steps=5 format=2]

[ext_resource path="res://font-micra-big.tres" type="DynamicFont" id=1]
[ext_resource path="res://hud/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://basic-theme.tres" type="Theme" id=3]
[ext_resource path="res://hud/EndHud.gd" type="Script" id=4]

[node name="EndHud" type="Control"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -102.5
margin_top = 112.0
margin_right = 102.5
margin_bottom = 162.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Cleared!"

[node name="NewBestScoreLabel" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.5
margin_top = 61.0
margin_right = 60.5
margin_bottom = 86.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.141176, 0.117647, 0.435294, 1 )
text = "New best!"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -95.0
margin_right = 180.0
margin_bottom = 100.0
custom_constants/separation = 20
alignment = 1

[node name="TimeLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 25.0
theme = ExtResource( 3 )
text = "Time: "
align = 1

[node name="Label4" type="Label" parent="CanvasLayer/VBoxContainer"]
visible = false
margin_top = 29.0
margin_right = 360.0
margin_bottom = 54.0
theme = ExtResource( 3 )
text = "x"
align = 1

[node name="MovesLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 45.0
margin_right = 360.0
margin_bottom = 70.0
theme = ExtResource( 3 )
text = "Moves: "
align = 1

[node name="MovesLabel2" type="Label" parent="CanvasLayer/VBoxContainer"]
visible = false
margin_top = 63.0
margin_right = 360.0
margin_bottom = 88.0
theme = ExtResource( 3 )
text = "+"
align = 1

[node name="SkipLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 90.0
margin_right = 360.0
margin_bottom = 115.0
theme = ExtResource( 3 )
text = "Skip: "
align = 1

[node name="Empty" type="Label" parent="CanvasLayer/VBoxContainer"]
visible = false
margin_top = 120.0
margin_right = 360.0
margin_bottom = 134.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 135.0
margin_right = 360.0
margin_bottom = 215.0
alignment = 1

[node name="Label4" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 163.0
margin_right = 193.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 1 )
text = "="

[node name="AllScoreLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 180.0
margin_right = 180.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1

[node name="Button" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -142.0
margin_right = 60.0
margin_bottom = -96.0
theme = ExtResource( 3 )
text = "Back"

[node name="Background" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
